fixed height stretch on testing images and added project-image to final screen in trove

--- a/css/styles.css
+++ b/css/styles.css
@@ -964,7 +964,6 @@ p.percentage-population {
 }
 
 .user-testing-img {
-  height: 5%;
   box-shadow: 2px 2px 4px 2px rgba(0, 0, 0, .1);
 }
 
